--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,7 @@ footer{
     flex-direction: column;
     align-items: center;
    background-color: rgb(0,0,0,0.45);
+   border-top:  1px solid #fff;
     margin-top: 20px;
 }
 .site:hover{
